# SOP-Robot

./: .gitignore  plan.txt  test.txt
config/: temp_dynamixel_for_launch.yaml
src/aervision_msgs/: CMakeLists.txt  package.xml
src/aervision_msgs/msg/: Exp.msg
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher_member_function.cpp
src/emotion_detection/: setup.py
src/emotion_detection/emotion_detection/: action_client.py  emotion_detection.py  face_detection.py  logger.py
src/emotion_detection/launch/: main.launch.py
src/explisten/: package.xml  setup.cfg  setup.py
src/explisten/explisten/: response.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py
src/response/: CMakeLists.txt  package.xml
src/response/src/: expression_listener.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/response_action/client/: package.xml  setup.cfg  setup.py
src/response_action/server/: package.xml  setup.cfg  setup.py
src/response_msgs/: CMakeLists.txt  package.xml
src/response_msgs/msg/: response_goal.msg
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/vision/: package.xml  setup.py
src/vision/launch/: vision.test.launch.py
src/vision/vision/: vision_node.py
src/vision2/: package.xml  setup.cfg  setup.py
src/vision2/launch/: vision2.test.launch.py
src/vision2/vision2/: clienttest.py  expression_detection_node.py  (+3 more)
src/vision2_msgs/: CMakeLists.txt
timingTests/: testiloki.txt  timingtest-updated1.txt  timingtest1-face.txt  timingtest1.txt
(+5 files in other folders)
